# CalendarApp

./: .gitignore  CMakeLists.txt  CalendarApp copy.c  CalendarApp.c  CalendarApp.h  CalendarApp_temp.c  HTTP_pico.c  HTTP_pico.h  HTTPrequestExample.c  ImageData.c  ImageData.h  NTPexample.c  README.md  micropythonHAtest.py  pythonTest.py  simpleStart.c  text.txt
lib/HTTP/: CMakeLists.txt  HTTPRequestExample_2.c  HTTP_client.c  HTTP_client.h  HTTP_pico.c  HTTP_pico.h
lib/NTP/: CMakeLists.txt  NTP_pico.c  NTP_pico.h
lib/Utils/: CMakeLists.txt  datetimes.c  datetimes.h  events.c  events.h  json_utils.c  json_utils.h
